refactor: Make the API be cleaner, well-structured
