# docs/swagger.yaml
@@ -2,8 +2,12 @@ basePath: /api
 definitions:
   model.Student:
     properties:
+      dob:
+        type: string
       email:
         type: string
+      gpa:
+        type: number
       id:
         type: integer
       name:
@@ -18,9 +22,18 @@ definitions:
       message:
         type: string
     type: object
-  response.SuccessResponse:
+  response.SuccessResponse-any:
     properties:
       data: {}
+      message:
+        type: string
+    type: object
+  response.SuccessResponse-array_model_Student:
+    properties:
+      data:
+        items:
+          $ref: '#/definitions/model.Student'
+        type: array
       message:
         type: string
     type: object
@@ -43,7 +56,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/response.SuccessResponse'
+            $ref: '#/definitions/response.SuccessResponse-any'
         "404":
           description: Not Found
           schema:
@@ -60,7 +73,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/model.Student'
+            $ref: '#/definitions/response.SuccessResponse-array_model_Student'
         "404":
           description: Not Found
           schema:
@@ -77,7 +90,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/response.SuccessResponse'
+            $ref: '#/definitions/response.SuccessResponse-any'
         "404":
           description: Not Found
           schema:
